# product/online/docs/swagger.yaml
@@ -1,6 +1,110 @@
 info:
   contact: {}
 paths:
+  /category-create:
+    post:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: parentId
+        in: formData
+        name: parentId
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 分类创建
+      tags:
+      - 管理员私有方法
+  /category-delete:
+    delete:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: identity
+        in: formData
+        name: identity
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 分类删除
+      tags:
+      - 管理员私有方法
+  /category-list:
+    get:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      - description: keyword
+        in: query
+        name: keyword
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 分类列表
+      tags:
+      - 管理员私有方法
+  /category-modify:
+    put:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: identity
+        in: formData
+        name: identity
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: parentId
+        in: formData
+        name: parentId
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 分类修改
+      tags:
+      - 管理员私有方法
   /login:
     post:
       parameters:
@@ -18,6 +122,8 @@ paths:
           schema:
             type: string
       summary: 用户登录
+      tags:
+      - 公共方法
   /problem-create:
     post:
       parameters:
@@ -59,6 +165,8 @@ paths:
           schema:
             type: string
       summary: 问题创建
+      tags:
+      - 管理员私有方法
   /problem-detail:
     get:
       parameters:
@@ -72,6 +180,8 @@ paths:
           schema:
             type: string
       summary: 问题详情
+      tags:
+      - 公共方法
   /problem-list:
     get:
       parameters:
@@ -97,6 +207,8 @@ paths:
           schema:
             type: string
       summary: 问题列表
+      tags:
+      - 公共方法
   /rank-list:
     get:
       parameters:
@@ -114,6 +226,8 @@ paths:
           schema:
             type: string
       summary: 用户排行榜
+      tags:
+      - 公共方法
   /register:
     post:
       parameters:
@@ -147,6 +261,8 @@ paths:
           schema:
             type: string
       summary: 用户注册
+      tags:
+      - 公共方法
   /send-code:
     post:
       parameters:
@@ -160,6 +276,8 @@ paths:
           schema:
             type: string
       summary: 发送验证码
+      tags:
+      - 公共方法
   /submit-list:
     get:
       parameters:
@@ -189,6 +307,8 @@ paths:
           schema:
             type: string
       summary: 提交列表
+      tags:
+      - 公共方法
   /user-detail:
     get:
       parameters:
@@ -202,4 +322,6 @@ paths:
           schema:
             type: string
       summary: 用户详情
+      tags:
+      - 公共方法
 swagger: "2.0"
