# product/online/router/app.go
@@ -36,6 +36,15 @@ func Router() *gin.Engine {
 	r.GET("/submit-list", service.GetSubmitList)
 
 	// 管理员私有方法
+	// 问题创建
 	r.POST("/problem-create", middlewares.AuthAdminCheck(), service.GetProblemCreate)
+	// 分类列表
+	r.GET("/category-list", middlewares.AuthAdminCheck(), service.GetCategoryList)
+	// 分类创建
+	r.POST("/category-create", middlewares.AuthAdminCheck(), service.CategoryCreate)
+	// 分类修改
+	r.PUT("/category-modify", middlewares.AuthAdminCheck(), service.CategoryModify)
+	// 分类删除
+	r.DELETE("/category-delete", middlewares.AuthAdminCheck(), service.CategoryDelete)
 	return r
 }
